--- a/.github/ISSUE_TEMPLATE/✨-새로운-기능.yml
+++ b/.github/ISSUE_TEMPLATE/✨-새로운-기능.yml
@@ -1,7 +1,7 @@
-name: "✨ 새로운 기능"
-about: 새로운 기능을 추가할 때 사용합니다.
+name: ✨ 새로운 기능
+description: 새로운 기능을 추가할 때 사용합니다.
 title: "[Feature] <제목>"
-labels: Feature
+labels: ["Feature"]
 body:
 - type: textarea
   attributes:
