--- a/.github/ISSUE_TEMPLATE/✨-새로운-기능.yml
+++ b/.github/ISSUE_TEMPLATE/✨-새로운-기능.yml
@@ -7,6 +7,6 @@ labels: ["Feature"]
   attributes:
     label: 이슈의 SubTask들을 알려주세요.
     description: 해당 내용의 SubTask를 나열해주세요.
-    placeholder: - [ ] subtask 1
+    placeholder: 
   validations:
     required: true
