--- a/.github/ISSUE_TEMPLATE/New Feature.yml
+++ b/.github/ISSUE_TEMPLATE/New Feature.yml
@@ -2,11 +2,11 @@ name: ✨ 새로운 기능!
 description: 새로운 기능을 추가할 때 사용합니다.
 title: "[Feature] <제목>"
 labels: ["Feature"]
-body:
+body:
 - type: textarea
   attributes:
     label: 이슈의 SubTask들을 알려주세요.
     description: 해당 내용의 SubTask를 나열해주세요.
-    placeholder: 
+    placeholder: subtask1
   validations:
     required: true
