--- a/LabDuck/Info.plist
+++ b/LabDuck/Info.plist
@@ -19,6 +19,8 @@
 			<string>$(PRODUCT_BUNDLE_IDENTIFIER).board-document</string>
 		</dict>
 	</array>
+	<key>Information Property List</key>
+	<dict/>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
